[tool.poetry]
name = "ai-agents"
version = "0.1.0"
description = ""
authors = ["Manoel Cendon Duran <manoel.duran@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
langchain = "^0.3.1"
requests = "^2.32.3"
black = "^24.8.0"
langchain-openai = "^0.2.1"
beautifulsoup4 = "^4.12.3"
poetry-dotenv-plugin = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
